# GLMinecraft3

./: CMakeLists.txt  __embed_file.c  common_sense_git.sh  gl.cpp  gl.h  glad.c  glad.h  main.cpp
GGE/Utils/: Any.h  BasicGraphics.h  Binary.h  Bounds2D.h  BufferList.h  Collection.h  EventChain.h  FileSystemHelper.h  GGE Flags.txt  GGE.h  Iterator.h  LinkedList.h  ManagedBuffer.h  Margins.h  PAClassList.h  Point2D.h  Property.h  Random.h  Rectangle2D.h  Size2D.h  Utils.h  ValueList.h
SocketLib/: Definitions.h  HostInfo.cpp  HostInfo.h  Networking.cpp  Networking.h  Private.cpp  Private.h  SocketException.h  TCPClient.h  TCPServer.cpp  TCPServer.h  TCPSocketStream.h  TCPSocketStreamBuffer.cpp  TCPSocketStreamBuffer.h
SocketLib/pThreads/: pthread.h
lib/: glad.cpp  khrplatform.h  stb_image.h
lib/anl/: noise_gen.cpp
lib/anl/templates/: tarrays.h
lib/gen_assets/: SHADER_chunk_frag.c  SHADER_chunk_vert.c  SHADER_entity_vert.c  SHADER_item3d_frag.c  SHADER_item3d_vert.c  SHADER_item_frag.c  SHADER_item_vert.c  SHADER_text_frag.c  SHADER_text_vert.c  SHADER_wireframe_frag.c  TEXTURE_1_8_textures_0_png.c  TEXTURE_ascii_png.c  TEXTURE_entity_zombie.c  TEXTURE_gui_widgets_png.c  TEXTURE_pig_png.c
shaders/: test.frag  test.vert
src/: both.h  client.cpp  main.cpp  server.cpp  utils.h
src/ai/: pathfinding.cpp  pathfinding.h
src/assets/shaders/: basic.vert  chunk.frag  chunk.vert  entity.frag  entity.vert  item.frag  item.vert  item3d.vert  test.frag  test.vert  text.frag  text.vert  wireframe.frag  wireframe.vert
src/block/: block.cpp  block.h  block_grass.h  block_ids.h  blocks.cpp  blocks.h  blockstate.cpp  blockstate.h  world.cpp  world.h
src/block/types/: block_bricks.cpp  block_bricks.h  block_dirt.cpp  block_dirt.h  block_grass.cpp  block_grass.h  block_none.cpp  block_none.h  block_stone.cpp  block_stone.h
src/client/: block_rendering.cpp  block_rendering.h  box_renderer.h  box_rendering.cpp  client_world.cpp  client_world.h  ctx3d.h  game.cpp  game.h  gui_ctx.h  item_renderer.cpp  item_renderer.h  rendered_chunk.cpp  rendered_chunk.h  rendering.h  text_rendering.h
src/client/render_entity/: entity_render.cpp  entity_render.h  textured_cube_render.h
src/entity/: aabb.h  entities.cpp  entities.h  entity.cpp  entity.h  entity_ai.cpp  entity_ai.h  entity_id.h  entity_physics.cpp  entity_physics.h  entity_pig.cpp  entity_pig.h  entity_player.cpp  entity_player.h  entity_zombie.cpp  entity_zombie.h
src/gen_assets/: SHADER_chunk_frag.c  SHADER_chunk_vert.c  SHADER_entity_frag.c  SHADER_entity_vert.c  SHADER_text_frag.c  SHADER_text_vert.c  SHADER_wireframe_frag.c  SHADER_wireframe_vert.c  TEXTURE_1_8_textures_0_png.c  TEXTURE_ascii_png.c  TEXTURE_entity_steve.c
src/gl/: gl.cpp  gl.h  glad.h  khrplatform.h  mesh.cpp  mesh.h  meshdata.cpp  meshdata.h  shader.cpp  shader.h  stb_image.h  texture.cpp  texture.h
src/item/: item.cpp  item.h  item_block.cpp  item_block.h  item_enums.cpp  item_enums.h  item_none.cpp  item_none.h  item_sword.cpp  item_sword.h  registry.cpp  registry.h
src/nbt/: __nbt.cpp  __nbt.h  __nbt_compound.cpp  __nbt_compound.h  __nbt_float.cpp  __nbt_float.h  __nbt_int.cpp  __nbt_int.h  __nbt_list.cpp  __nbt_list.h  __nbt_long.cpp  __nbt_long.h  __nbt_short.cpp  __nbt_short.h  __nbt_string.cpp  __nbt_string.h  __nbt_utils.cpp  __nbt_utils.h  nbt.cpp  nbt.h
src/networking/: message.h
src/server/: acceptor.cpp  acceptor.h  delayed_task.cpp  delayed_task.h  entity.cpp  entity.h  entity_ids.h  entity_manager.h  game_room.cpp  game_room.h  jsonformat.h  registry.cpp  server.cpp  server.h  server_player.h  session.cpp  session.h
src/staging/: select_profile.h
src/utils/: aabb.h  eventable.cpp  eventable.h  profiler.cpp  profiler.h  registry.cpp  registry.h  utils.cpp  utils.h
src/utils/noise/: noise.cpp  noise.h
src/world/: world.cpp  world.h
